@@ -239,13 +239,9 @@ table.g-nav-pages td {
     vertical-align: top;
 }
 
-
-.g-emailMe-box ul {
-    margin: 5px;
-}
-
 .g-emailMe-box {
     margin-bottom: 2px;
+    padding: 5px;
 }
 
 .clear {
